@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -22,10 +21,10 @@ class HealthUtilTest {
 
   @Test
   void callEndpointTest1() {
-    Map<String, String> dataProject = new HashMap<>();
+    final Map<String, String> dataProject = new HashMap<>();
     dataProject.put("projectService", "ICMCLCWB");
 
-    Health health = HealthUtil.callEndpoint(false, dataProject, null,
+    final Health health = HealthUtil.callEndpoint(false, dataProject, null,
         null, null, null);
 
     assertNotNull(health);
@@ -34,15 +33,15 @@ class HealthUtilTest {
 
   @Test
   void callEndpointTest2() {
-    Map<String, String> dataProject = new HashMap<>();
+    final Map<String, String> dataProject = new HashMap<>();
     dataProject.put("projectService", "ICMCLCWB");
     dataProject.put("usernameService", "user");
     dataProject.put("passwordService", "pass");
     dataProject.put("authMethodService", "BASIC");
 
-    List<String> urls = Arrays.asList("url");
+    final List<String> urls = List.of("url");
 
-    Health health = HealthUtil.callEndpoint(true, dataProject, urls,
+    final Health health = HealthUtil.callEndpoint(true, dataProject, urls,
         TypeHealthEnum.VALIDATE_RESPONSE_STATUS_CODE_OK, Duration.ofHours(Long.valueOf(0)),
         Duration.ofHours(Long.valueOf(0)));
 
@@ -51,20 +50,19 @@ class HealthUtilTest {
 
   @Test
   void callEndpointTest3() {
-    Map<String, String> dataProject = new HashMap<>();
+    final Map<String, String> dataProject = new HashMap<>();
     dataProject.put("projectService", "ICMCLCWB");
     dataProject.put("usernameService", "user");
     dataProject.put("passwordService", "pass");
     dataProject.put("authMethodService", "NONE");
 
-    List<String> urls = Arrays
-        .asList("https://des-openshift.axdesocp1.central.inditex.grp/icmclcws-develop/validationCheck");
+    final List<String> urls = List.of("https://des-openshift.axdesocp1.central.inditex.grp/icmclcws/validationCheck");
 
-    Health health = HealthUtil.callEndpoint(true, dataProject, urls,
+    final Health health = HealthUtil.callEndpoint(true, dataProject, urls,
         TypeHealthEnum.AMIGA_HEALTH_STATUS_UP, Duration.ofHours(Long.valueOf(0)),
         Duration.ofHours(Long.valueOf(0)));
 
-    Health health2 = HealthUtil.callEndpoint(true, dataProject, urls,
+    final Health health2 = HealthUtil.callEndpoint(true, dataProject, urls,
         TypeHealthEnum.VALIDATE_RESPONSE_STATUS_CODE_OK, Duration.ofHours(Long.valueOf(0)),
         Duration.ofHours(Long.valueOf(0)));
 
@@ -75,15 +73,15 @@ class HealthUtilTest {
 
   @Test
   void callEndpointTest4() {
-    Map<String, String> dataProject = new HashMap<>();
+    final Map<String, String> dataProject = new HashMap<>();
     dataProject.put("projectService", "ICMCLCWB");
     dataProject.put("usernameService", "user");
     dataProject.put("passwordService", "pass");
     dataProject.put("authMethodService", "BASIC");
 
-    List<String> urls = Arrays.asList();
+    final List<String> urls = List.of();
 
-    Health health = HealthUtil.callEndpoint(true, dataProject, urls,
+    final Health health = HealthUtil.callEndpoint(true, dataProject, urls,
         TypeHealthEnum.VALIDATE_RESPONSE_STATUS_CODE_OK, Duration.ofHours(Long.valueOf(0)),
         Duration.ofHours(Long.valueOf(0)));
 
@@ -92,14 +90,13 @@ class HealthUtilTest {
 
   @Test
   void callEndpointThrowTest() {
-    Map<String, String> dataProject = new HashMap<>();
+    final Map<String, String> dataProject = new HashMap<>();
     dataProject.put("projectService", "ICMCLCWB");
     dataProject.put("usernameService", "user");
     dataProject.put("passwordService", "pass");
     dataProject.put("authMethodService", "NONE");
 
-    List<String> urls = Arrays
-        .asList("url");
+    final List<String> urls = List.of("url");
 
     Assertions.assertThrows(IllegalArgumentException.class, () -> {
       HealthUtil.callEndpoint(true, dataProject, urls,
